# rust-wasm-template

./: .gitignore  Cargo.toml  LICENSE.md  README.md  index.html  index.js  package-lock.json  package.json  webpack.config.js
src/: lib.rs
