[package]
name = "rust-wasm-template"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = "0.2"

[dependencies.web-sys]
features = [
  "console"
]
version = "0.3.61"

[lib]
crate-type = ["cdylib"]
